Ensure scrollbar is always visible on medium screens to prevent LS in _layout scss file

--- a/sass/_lateral-menu.scss
+++ b/sass/_lateral-menu.scss
@@ -91,10 +91,3 @@
         display: none;
     }
 }
-
-// Ensure scrollbar is always visible on medium screens to prevent layout shifts
-@include respond-to('md') {
-    html {
-        overflow-y: scroll;
-    }
-} 
